--- a/style.css
+++ b/style.css
@@ -31,6 +31,10 @@ button{
     border: 2px solid #5E17EB;
     color: #5E17EB;
 }
+.profile-img{
+    width: 60%;
+    height: 250px;
+}
 img{
     border-radius: 50%;
     background-color: #5E17EB;
