--- a/style.css
+++ b/style.css
@@ -25,14 +25,17 @@ nav{
     color: #5E17EB;
 }
 button{
-    width: 100px;
-    height: 40px;
+    margin-top: 10px;
+    width: 80px;
+    height: 30px;
     background-color: white;
     border: 2px solid #5E17EB;
     color: #5E17EB;
+    font-weight: bolder;
+    text-transform: uppercase;
 }
 .profile-img{
-    width: 60%;
+    width: 200Px;
     height: 250px;
 }
 img{
@@ -77,4 +80,26 @@ a{
     color: #5E17EB;
     font-size: 1.2rem;
     
+}
+footer{
+    width: 100%;
+    height: 150px;
+    background-color: #5E17EB;
+    margin-bottom: 10px;
+    padding: 20px 0px 20px 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    color: white;
+}
+#project{
+    color: #5E17EB;
+    text-decoration: none;
+    font-weight: bolder;
+    padding: 4px 8px;
+    background-color: white;
+    margin-top: 10px;
 }
